tests/purs/failing/DiffKindsSameName/LibA.purs
module DiffKindsSameName.LibA where

foreign import kind DemoKind

